2008-04-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/persp/dbgperspective/nmv-memory-view.cc: properly set memory editor
	widget to insensitive when the debugger is running.  Otherwise the user
	could change the memory values and it would attempt to send those values to
	gdb when it wasn't ready for them.

2008-04-08 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-i-debugger.h:
	  add IDebugger::is_attached_to_target() to let
	  client know if IDebugger is attached to a target or not.
	* src/dbgengine/nmv-gdb-engine.cc:
	  basically track when we are attached to a target or not.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  When we detach from a target, the "detach from target" menu
	  should be set to insensitive. This should fix #526696.

2008-04-07 Dodji Seketeli <dodji@gnome.org>

	* README: updated.

2008-04-06 Dodji Seketeli <dodji@gnome.org>

=============== 0.5.2 release ===================

2008-04-06 Dodji Seketeli <dodji@gnome.org>

	* NEWS: updated.

2008-04-06 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdbmi-parser.cc:
	  (parse_breakpoint): fix PENDING breakpoint parsing. This was leading
	  to a crash in cases where the breakpoint was being set using
	  "break function-name". It was okay for "break file-name:line-num"
	  though.
	* tests/test-gdbmi.cc: add regression testing for this bugfix.
	* src/dbgengine/nmv-gdb-engine.cc:
	  (GDBEngine::load_program): make sure to "set breakpoint pending on"
	  and not "set breakpoint pending auto", otherwise, pending breakpoint
	  will not be supported in nemiver.
	  (GDBEngine::set_breakpoint): when setting breakpoint on a function
	  name that is a not-yet-loaded library, give gdb a chance to set the
	  breakpoint 'pending'. For that, do not use the the MI syntax to set
	  the breakpoint because MI does not support pending breakpoints.
	  As the syntax is not MI, gdb won't return an MI notification about the